--- a/app/src/main/res/layout/activity_pay_result.xml
+++ b/app/src/main/res/layout/activity_pay_result.xml
@@ -6,14 +6,14 @@
     <data>
 
         <variable
-            name="ed"
-            type="com.example.mobiletest.ui.test5g.EncryptOrDecryptActivity" />
+            name="payResult"
+            type="com.example.mobiletest.ui.test5g.PayResultActivity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.test5g.EncryptOrDecryptActivity">
+        tools:context=".ui.test5g.PayResultActivity">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/title"
@@ -28,17 +28,19 @@
                 android:layout_width="22dp"
                 android:layout_height="22dp"
                 android:layout_margin="12dp"
-                android:onClick="@{()->ed.back()}"
+                android:onClick="@{()->payResult.back()}"
                 android:src="@mipmap/ic_back"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/head"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/test_5g_msg"
+                android:text="支付结果"
                 android:textColor="#FF333333"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -53,67 +55,42 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent" />
 
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <com.example.mobiletest.view.ClearEditView
-            android:id="@+id/message"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginLeft="35dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="35dp"
-            android:hint="请输入内容"
-            android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@+id/title" />
+        <ImageView
+            android:id="@+id/successImg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_success"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.2" />
 
         <TextView
-            android:id="@+id/resultText"
+            android:id="@+id/money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:text="加解密结果:"
-            android:textColor="#FF333333"
-            app:layout_constraintLeft_toLeftOf="@+id/message"
-            app:layout_constraintTop_toBottomOf="@+id/message" />
+            android:text="支付成功"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/successImg" />
 
-        <TextView
-            android:id="@+id/result"
+        <Button
+            android:id="@+id/pay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="35dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="40dp"
             android:layout_marginRight="35dp"
-            android:text="~~~~~"
-            android:textColor="#FF333333"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/resultText" />
-
-        <Button
-            android:id="@+id/encrypt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
             android:background="@drawable/ripple_bg"
-            android:onClick="@{()->ed.encrypt()}"
-            android:text="@string/encryption"
+            android:onClick="@{()->payResult.goMain()}"
+            android:text="返回主页"
             android:textColor="@color/textColor"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/result" />
-
-        <Button
-            android:id="@+id/decrypt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:background="@drawable/ripple_bg"
-            android:onClick="@{()->ed.decrypt()}"
-            android:text="@string/decryption"
-            android:textColor="@color/textColor"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/encrypt" />
+            app:layout_constraintTop_toBottomOf="@+id/money" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
