--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -71,11 +71,11 @@
             android:id="@+id/money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/successImg"
+            android:layout_marginTop="20dp"
+            android:text="支付金额:100元"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="20dp"
-            android:text="支付金额:100元"/>
+            app:layout_constraintTop_toBottomOf="@+id/successImg" />
 
         <Button
             android:id="@+id/pay"
