--- a/app/src/main/res/layout/activity_pay_result.xml
+++ b/app/src/main/res/layout/activity_pay_result.xml
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="支付结果"
+                android:text="@string/pay_result"
                 android:textColor="#FF333333"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -69,17 +69,17 @@
             app:layout_constraintVertical_bias="0.2" />
 
         <TextView
-            android:id="@+id/money"
+            android:id="@+id/payResult"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="支付成功"
+            android:text="@string/pay_success"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/successImg" />
 
         <Button
-            android:id="@+id/pay"
+            android:id="@+id/goMain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="35dp"
@@ -87,10 +87,10 @@
             android:layout_marginRight="35dp"
             android:background="@drawable/ripple_bg"
             android:onClick="@{()->payResult.goMain()}"
-            android:text="返回主页"
+            android:text="@string/back_home"
             android:textColor="@color/textColor"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/money" />
+            app:layout_constraintTop_toBottomOf="@+id/payResult" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
