--- a/app/src/main/res/layout/activity_encrypt_or_decrypt.xml
+++ b/app/src/main/res/layout/activity_encrypt_or_decrypt.xml
@@ -65,6 +65,7 @@
             android:layout_marginRight="35dp"
             android:text="@string/msg_5g_text"
             android:textColor="#FF333333"
+            android:textSize="@dimen/content_size"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title" />
 
@@ -75,7 +76,7 @@
             android:layout_marginStart="35dp"
             android:layout_marginTop="20dp"
             android:hint="@string/message_edit_hint"
-            android:textSize="14sp"
+            android:textSize="@dimen/content_size"
             app:layout_constraintHorizontal_weight="2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/get5GMsg"
@@ -91,6 +92,7 @@
             android:onClick="@{()->ed.get5GMsg()}"
             android:text="@string/get_5g_msg"
             android:textColor="@color/textColor"
+            android:textSize="@dimen/button_size"
             app:layout_constraintBaseline_toBaselineOf="@+id/message"
             app:layout_constraintBottom_toBottomOf="@+id/message"
             app:layout_constraintHorizontal_weight="1"
@@ -105,6 +107,7 @@
             android:layout_marginBottom="20dp"
             android:text="@string/local_5g_msg_save"
             android:textColor="#FF333333"
+            android:textSize="@dimen/content_size"
             app:layout_constraintLeft_toLeftOf="@+id/message"
             app:layout_constraintTop_toBottomOf="@+id/message" />
 
@@ -113,10 +116,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="35dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:hint="@string/local_5g_msg"
             android:textColor="#FF333333"
-            android:textSize="14sp"
+            android:textSize="@dimen/content_size"
             app:layout_constraintHorizontal_weight="2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/save5GMsg"
@@ -132,6 +135,7 @@
             android:onClick="@{()->ed.save5GMsg()}"
             android:text="@string/save_5g_msg"
             android:textColor="@color/textColor"
+            android:textSize="@dimen/button_size"
             app:layout_constraintBaseline_toBaselineOf="@+id/result"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintLeft_toRightOf="@+id/result"
@@ -147,6 +151,7 @@
             android:onClick="@{()->ed.encrypt()}"
             android:text="@string/encryption"
             android:textColor="@color/textColor"
+            android:textSize="@dimen/button_size"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/decrypt"
@@ -162,6 +167,7 @@
             android:onClick="@{()->ed.decrypt()}"
             android:text="@string/decryption"
             android:textColor="@color/textColor"
+            android:textSize="@dimen/button_size"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintLeft_toRightOf="@+id/encrypt"
             app:layout_constraintRight_toLeftOf="@+id/clear"
@@ -176,6 +182,7 @@
             android:onClick="@{()->ed.clear()}"
             android:text="@string/clear"
             android:textColor="@color/textColor"
+            android:textSize="@dimen/button_size"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintLeft_toRightOf="@+id/decrypt"
             app:layout_constraintRight_toRightOf="parent"
