--- a/app/src/main/res/layout/activity_test_5g_msg.xml
+++ b/app/src/main/res/layout/activity_test_5g_msg.xml
@@ -66,6 +66,7 @@
             android:onClick="@{()->test.goEncryptOrDecrypt()}"
             android:text="@string/encrypt_or_decrypt"
             android:textColor="@color/textColor"
+            android:textSize="@dimen/button_size"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title" />
@@ -81,6 +82,7 @@
             android:onClick="@{()->test.goOnlinePay()}"
             android:text="@string/online_pay"
             android:textColor="@color/textColor"
+            android:textSize="@dimen/button_size"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/encryptOrDecrypt" />
@@ -96,6 +98,7 @@
             android:onClick="@{()->test.goNFCPay()}"
             android:text="@string/nfc_pay"
             android:textColor="@color/textColor"
+            android:textSize="@dimen/button_size"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/onlinePay" />
