--- a/app/src/main/res/layout/activity_encrypt_or_decrypt.xml
+++ b/app/src/main/res/layout/activity_encrypt_or_decrypt.xml
@@ -58,50 +58,65 @@
 
         <TextView
             android:id="@+id/msg5GText"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
-            android:layout_marginRight="35dp"
             android:text="@string/msg_5g_text"
             android:textColor="#FF333333"
             android:textSize="@dimen/content_size"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title" />
-
-        <com.example.mobiletest.view.ClearEditView
-            android:id="@+id/message"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="20dp"
-            android:hint="@string/message_edit_hint"
-            android:textSize="@dimen/content_size"
             app:layout_constraintHorizontal_weight="2"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/get5GMsg"
-            app:layout_constraintTop_toBottomOf="@+id/msg5GText" />
+            app:layout_constraintRight_toLeftOf="@+id/get5GMsg"
+            app:layout_constraintTop_toBottomOf="@+id/title" />
 
         <Button
             android:id="@+id/get5GMsg"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginStart="5dp"
-            android:layout_marginEnd="20dp"
             android:background="@drawable/ripple_bg"
             android:onClick="@{()->ed.get5GMsg()}"
             android:text="@string/get_5g_msg"
             android:textColor="@color/textColor"
             android:textSize="@dimen/button_size"
-            app:layout_constraintBaseline_toBaselineOf="@+id/message"
-            app:layout_constraintBottom_toBottomOf="@+id/message"
+            app:layout_constraintBaseline_toBaselineOf="@+id/msg5GText"
+            app:layout_constraintBottom_toBottomOf="@+id/msg5GText"
+            app:layout_constraintHorizontal_weight="1.5"
+            app:layout_constraintLeft_toRightOf="@+id/msg5GText"
+            app:layout_constraintRight_toLeftOf="@+id/clear" />
+
+        <Button
+            android:id="@+id/clear"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="30dp"
+            android:background="@drawable/ripple_bg"
+            android:onClick="@{()->ed.clear()}"
+            android:text="@string/clear"
+            android:textColor="@color/textColor"
+            android:textSize="@dimen/button_size"
+            app:layout_constraintBottom_toBottomOf="@+id/get5GMsg"
             app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintLeft_toRightOf="@+id/message"
+            app:layout_constraintLeft_toRightOf="@+id/get5GMsg"
             app:layout_constraintRight_toRightOf="parent" />
+
+        <com.example.mobiletest.view.ClearEditView
+            android:id="@+id/message"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="20dp"
+            android:hint="@string/message_edit_hint"
+            android:textSize="@dimen/content_size"
+            app:layout_constraintLeft_toLeftOf="@+id/msg5GText"
+            app:layout_constraintTop_toBottomOf="@+id/msg5GText" />
 
         <TextView
             android:id="@+id/resultText"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
@@ -109,9 +124,44 @@
             android:textColor="#FF333333"
             android:textSize="@dimen/content_size"
             app:layout_constraintLeft_toLeftOf="@+id/message"
+            app:layout_constraintHorizontal_weight="2"
+            app:layout_constraintRight_toLeftOf="@+id/save5GMsg"
             app:layout_constraintTop_toBottomOf="@+id/message" />
 
-        <TextView
+        <Button
+            android:id="@+id/save5GMsg"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/ripple_bg"
+            android:onClick="@{()->ed.save5GMsg()}"
+            android:text="@string/save_5g_msg"
+            android:textColor="@color/textColor"
+            android:textSize="@dimen/button_size"
+            app:layout_constraintBaseline_toBaselineOf="@+id/resultText"
+            app:layout_constraintHorizontal_weight="1.5"
+            app:layout_constraintLeft_toRightOf="@+id/resultText"
+            app:layout_constraintRight_toLeftOf="@+id/delete"
+            app:layout_constraintTop_toTopOf="@+id/resultText" />
+
+        <Button
+            android:id="@+id/delete"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="30dp"
+            android:background="@drawable/ripple_bg"
+            android:onClick="@{()->ed.delete()}"
+            android:text="@string/delete"
+            android:textColor="@color/textColor"
+            android:textSize="@dimen/button_size"
+            app:layout_constraintTop_toTopOf="@+id/save5GMsg"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintLeft_toRightOf="@+id/save5GMsg"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <!--<TextView
+            android:visibility="gone"
             android:id="@+id/result"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -123,30 +173,30 @@
             app:layout_constraintHorizontal_weight="2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/save5GMsg"
-            app:layout_constraintTop_toBottomOf="@+id/resultText" />
+            app:layout_constraintTop_toBottomOf="@+id/resultText" />-->
 
-        <Button
-            android:id="@+id/save5GMsg"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="20dp"
-            android:background="@drawable/ripple_bg"
-            android:onClick="@{()->ed.save5GMsg()}"
-            android:text="@string/save_5g_msg"
-            android:textColor="@color/textColor"
-            android:textSize="@dimen/button_size"
-            app:layout_constraintBaseline_toBaselineOf="@+id/result"
-            app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintLeft_toRightOf="@+id/result"
-            app:layout_constraintRight_toRightOf="parent" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="30dp"
+            app:layout_constraintHorizontal_weight="2"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/save5GMsg"
+            app:layout_constraintTop_toBottomOf="@+id/resultText"
+            app:layout_constraintBottom_toTopOf="@+id/encrypt"/>
+
+
 
         <Button
             android:id="@+id/encrypt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
             android:background="@drawable/ripple_bg"
             android:onClick="@{()->ed.encrypt()}"
             android:text="@string/encryption"
@@ -155,14 +205,14 @@
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/decrypt"
-            app:layout_constraintTop_toBottomOf="@+id/result" />
+            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
 
         <Button
             android:id="@+id/decrypt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="30dp"
             android:background="@drawable/ripple_bg"
             android:onClick="@{()->ed.decrypt()}"
             android:text="@string/decryption"
@@ -170,22 +220,9 @@
             android:textSize="@dimen/button_size"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintLeft_toRightOf="@+id/encrypt"
-            app:layout_constraintRight_toLeftOf="@+id/clear"
-            app:layout_constraintTop_toTopOf="@id/encrypt" />
-
-        <Button
-            android:id="@+id/clear"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:background="@drawable/ripple_bg"
-            android:onClick="@{()->ed.clear()}"
-            android:text="@string/clear"
-            android:textColor="@color/textColor"
-            android:textSize="@dimen/button_size"
-            app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintLeft_toRightOf="@+id/decrypt"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@id/encrypt" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
