--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="textColor">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="white_FAFAFA">#FAFAFA</color>
 </resources>
