--- a/app/src/main/res/layout/activity_encrypt_or_decrypt.xml
+++ b/app/src/main/res/layout/activity_encrypt_or_decrypt.xml
@@ -105,10 +105,10 @@
         <com.example.mobiletest.view.ClearEditView
             android:id="@+id/message"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="30dp"
-            android:layout_marginTop="20dp"
             android:hint="@string/message_edit_hint"
             android:textSize="@dimen/content_size"
             app:layout_constraintLeft_toLeftOf="@+id/msg5GText"
@@ -118,7 +118,7 @@
             android:id="@+id/resultText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:layout_marginBottom="20dp"
             android:text="@string/local_5g_msg_save"
             android:textColor="#FF333333"
@@ -178,13 +178,13 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="360dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="30dp"
             app:layout_constraintHorizontal_weight="2"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/save5GMsg"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/resultText"
             app:layout_constraintBottom_toTopOf="@+id/encrypt"/>
 
