--- a/app/src/main/res/layout/item_recycler.xml
+++ b/app/src/main/res/layout/item_recycler.xml
@@ -1,17 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/recycler_view_item_tv_selector"
+    android:clickable="true"
+    android:defaultFocusHighlightEnabled="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="match_parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="3dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:textSize="@dimen/content_size" />
 
     <TextView
         android:id="@+id/result"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="8dp"
         android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:background="@drawable/recycler_view_item_tv_selector"
-        android:clickable="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:gravity="center"
-        android:defaultFocusHighlightEnabled="true"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:textSize="@dimen/content_size" />
 </LinearLayout>
