--- a/app/src/main/res/layout/activity_encrypt_or_decrypt.xml
+++ b/app/src/main/res/layout/activity_encrypt_or_decrypt.xml
@@ -136,6 +136,7 @@
             android:layout_marginEnd="10dp"
             android:background="@drawable/ripple_bg"
             android:onClick="@{()->ed.save5GMsg()}"
+            android:visibility="invisible"
             android:text="@string/save_5g_msg"
             android:textColor="@color/textColor"
             android:textSize="@dimen/button_size"
