--- a/app/src/main/res/layout/activity_encrypt_or_decrypt.xml
+++ b/app/src/main/res/layout/activity_encrypt_or_decrypt.xml
@@ -215,7 +215,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="30dp"
             android:background="@drawable/ripple_bg"
-            android:onClick="@{()->ed.decrypt()}"
+            android:onClick="@{()->ed.judgeSimState()}"
             android:text="@string/decryption"
             android:textColor="@color/textColor"
             android:textSize="@dimen/button_size"
