跳转流程修改登陆-5g测试;加解密页面修改;在线支付页面修改;模拟卡支付数据传输

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,6 +65,7 @@
             android:layout_marginLeft="35dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="35dp"
+            android:visibility="invisible"
             android:background="@drawable/ripple_bg"
             android:onClick="@{()->main.goTest5GMsg()}"
             android:text="@string/_5g_message_security_tests"
