--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="textColor">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
     <color name="white_FAFAFA">#FAFAFA</color>
+    <color name="gray_8E8E8E">#8E8E8E</color>
 </resources>
