--- a/app/src/main/res/layout/activity_encrypt_or_decrypt.xml
+++ b/app/src/main/res/layout/activity_encrypt_or_decrypt.xml
@@ -70,10 +70,21 @@
             app:layout_constraintRight_toLeftOf="@+id/get5GMsg"
             app:layout_constraintTop_toBottomOf="@+id/title" />
 
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/gray_8E8E8E"
+            android:textSize="@dimen/content_size"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/get5GMsg" />
+
         <Button
             android:id="@+id/get5GMsg"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="36dp"
             android:layout_marginStart="5dp"
             android:background="@drawable/ripple_bg"
             android:onClick="@{()->ed.get5GMsg()}"
@@ -89,7 +100,7 @@
         <Button
             android:id="@+id/clear"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="36dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="30dp"
             android:background="@drawable/ripple_bg"
@@ -102,23 +113,24 @@
             app:layout_constraintLeft_toRightOf="@+id/get5GMsg"
             app:layout_constraintRight_toRightOf="parent" />
 
-        <com.example.mobiletest.view.ClearEditView
+        <EditText
             android:id="@+id/message"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="75dp"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="30dp"
             android:layout_marginEnd="30dp"
             android:hint="@string/message_edit_hint"
+            android:padding="5dp"
             android:textSize="@dimen/content_size"
+            android:background="@drawable/edit_bg"
             app:layout_constraintLeft_toLeftOf="@+id/msg5GText"
-            app:layout_constraintTop_toBottomOf="@+id/msg5GText" />
+            app:layout_constraintTop_toBottomOf="@+id/time" />
 
         <TextView
             android:id="@+id/resultText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:text="@string/local_5g_msg_save"
             android:textColor="#FF333333"
@@ -131,7 +143,7 @@
         <Button
             android:id="@+id/save5GMsg"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="36dp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="10dp"
             android:background="@drawable/ripple_bg"
@@ -149,7 +161,7 @@
         <Button
             android:id="@+id/delete"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="36dp"
             android:layout_marginEnd="30dp"
             android:background="@drawable/ripple_bg"
             android:onClick="@{()->ed.delete()}"
@@ -179,9 +191,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="360dp"
+            android:layout_height="340dp"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="30dp"
             app:layout_constraintHorizontal_weight="2"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -196,7 +208,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="30dp"
             android:background="@drawable/ripple_bg"
             android:onClick="@{()->ed.encrypt()}"
