--- a/app/src/main/res/layout/activity_pay_result.xml
+++ b/app/src/main/res/layout/activity_pay_result.xml
@@ -69,15 +69,25 @@
             app:layout_constraintVertical_bias="0.2" />
 
         <TextView
-            android:id="@+id/payResult"
+            android:id="@+id/money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/pay_success"
             android:textSize="@dimen/content_size"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/successImg" />
+
+        <TextView
+            android:id="@+id/payResult"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="@string/pay_success"
+            android:textSize="@dimen/content_size"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/money" />
 
         <Button
             android:id="@+id/goMain"
