--- a/app/src/main/res/drawable/recycler_view_item_tv_selector.xml
+++ b/app/src/main/res/drawable/recycler_view_item_tv_selector.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/item_shape" android:state_focused="true" />
 
-    <item android:drawable="@color/white_FAFAFA" />
+    <item android:drawable="@color/white" />
 </selector>
