--- a/app/src/main/res/layout/activity_encrypt_or_decrypt.xml
+++ b/app/src/main/res/layout/activity_encrypt_or_decrypt.xml
@@ -13,6 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".ui.test5g.EncryptOrDecryptActivity">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -119,10 +120,10 @@
             android:layout_height="75dp"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
+            android:background="@drawable/edit_bg"
             android:hint="@string/message_edit_hint"
             android:padding="5dp"
             android:textSize="@dimen/content_size"
-            android:background="@drawable/edit_bg"
             app:layout_constraintLeft_toLeftOf="@+id/msg5GText"
             app:layout_constraintTop_toBottomOf="@+id/time" />
 
@@ -135,8 +136,8 @@
             android:text="@string/local_5g_msg_save"
             android:textColor="#FF333333"
             android:textSize="@dimen/content_size"
-            app:layout_constraintLeft_toLeftOf="@+id/message"
             app:layout_constraintHorizontal_weight="2"
+            app:layout_constraintLeft_toLeftOf="@+id/message"
             app:layout_constraintRight_toLeftOf="@+id/save5GMsg"
             app:layout_constraintTop_toBottomOf="@+id/message" />
 
@@ -148,10 +149,10 @@
             android:layout_marginEnd="10dp"
             android:background="@drawable/ripple_bg"
             android:onClick="@{()->ed.save5GMsg()}"
-            android:visibility="invisible"
             android:text="@string/save_5g_msg"
             android:textColor="@color/textColor"
             android:textSize="@dimen/button_size"
+            android:visibility="invisible"
             app:layout_constraintBaseline_toBaselineOf="@+id/resultText"
             app:layout_constraintHorizontal_weight="1.5"
             app:layout_constraintLeft_toRightOf="@+id/resultText"
@@ -168,10 +169,10 @@
             android:text="@string/delete"
             android:textColor="@color/textColor"
             android:textSize="@dimen/button_size"
-            app:layout_constraintTop_toTopOf="@+id/save5GMsg"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintLeft_toRightOf="@+id/save5GMsg"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/save5GMsg" />
 
         <!--<TextView
             android:visibility="gone"
@@ -195,12 +196,11 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="30dp"
+            app:layout_constraintBottom_toTopOf="@+id/encrypt"
             app:layout_constraintHorizontal_weight="2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/resultText"
-            app:layout_constraintBottom_toTopOf="@+id/encrypt"/>
-
+            app:layout_constraintTop_toBottomOf="@+id/resultText" />
 
 
         <Button
