--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:background="@color/white"
         android:layout_height="match_parent">
 
         <LinearLayout
@@ -42,21 +43,44 @@
                 android:background="#E2E2E2" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="基于SIM卡的安全能力的一键登录演示"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/aKeyLogin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/logo" />
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_mobile"
+            app:layout_constraintVertical_bias="0.3"
+            app:layout_constraintBottom_toTopOf="@+id/aKeyLogin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title"/>
+
         <Button
             android:id="@+id/aKeyLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="35dp"
-            android:layout_marginTop="20dp"
             android:layout_marginRight="35dp"
             android:background="@drawable/ripple_bg"
+            app:layout_constraintVertical_bias="0.7"
             android:onClick="@{()->main.goLogin()}"
             android:text="@string/a_key_to_login"
             android:textColor="@color/textColor"
             android:textSize="@dimen/button_size"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title" />
+            app:layout_constraintTop_toTopOf="@+id/title" />
 
         <Button
             android:id="@+id/test5gMsg"
