--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -13,6 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".ui.test5g.PayActivity">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -67,18 +68,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.2" />
 
-        <TextView
-            android:id="@+id/nfcMoney"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textSize="@dimen/content_size"
-            android:visibility="invisible"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/successImg"
-            tools:text="支付金额:100元" />
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/onlineCons"
             android:layout_width="wrap_content"
@@ -101,13 +90,24 @@
                 android:id="@+id/onlineMoney"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/content_size"
                 android:inputType="numberDecimal"
+                android:textSize="@dimen/content_size"
                 app:layout_constraintLeft_toRightOf="@+id/text1"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="100" />
 
             <TextView
+                android:id="@+id/nfcMoney"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/content_size"
+                app:layout_constraintBaseline_toBaselineOf="@+id/text1"
+                app:layout_constraintLeft_toRightOf="@+id/text1"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="100" />
+
+            <TextView
+                android:id="@+id/onlineYuan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/yuan"
@@ -115,7 +115,30 @@
                 app:layout_constraintBaseline_toBaselineOf="@+id/onlineMoney"
                 app:layout_constraintLeft_toRightOf="@+id/onlineMoney" />
 
+            <TextView
+                android:id="@+id/nfcYuan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/yuan"
+                android:textSize="@dimen/content_size"
+                app:layout_constraintBaseline_toBaselineOf="@+id/onlineMoney"
+                app:layout_constraintLeft_toRightOf="@+id/nfcMoney" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <TextView
+            android:id="@+id/prompt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="35dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginRight="35dp"
+            android:text="@string/again_approach_the_pos"
+            android:textSize="20sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/onlineCons" />
 
         <Button
             android:id="@+id/pay"
@@ -129,9 +152,10 @@
             android:text="@string/pay"
             android:textColor="@color/textColor"
             android:textSize="@dimen/button_size"
+            android:visibility="invisible"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nfcMoney" />
+            app:layout_constraintTop_toBottomOf="@+id/onlineCons" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
