--- a/app/src/main/res/layout/activity_remind.xml
+++ b/app/src/main/res/layout/activity_remind.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="login"
-            type="com.example.mobiletest.ui.login.LoginResultActivity" />
+            name="remind"
+            type="com.example.mobiletest.ui.test5g.RemindActivity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -29,7 +29,7 @@
                 android:layout_width="22dp"
                 android:layout_height="22dp"
                 android:layout_margin="12dp"
-                android:onClick="@{()->login.back()}"
+                android:onClick="@{()->remind.back()}"
                 android:src="@mipmap/ic_back"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
